fix vertical alignment in nav bar

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -132,14 +132,15 @@ footer p {
 nav {
   background: #eee;
   border-bottom: 2px solid #ccc;
-  font-size: 17px;
+  font-size: 18px;
 }
 nav .logo {
   line-height: 0;
   margin-right: 1.3em;
-  padding: 7px 0;
+  padding: 5px 0;
 }
 nav ul {
+  margin: 13px 0;
   padding: 0;
   text-align: right;
 }
